	syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customer{

}

message CustomerLookupModel{
	int32 userId=1;
}

message CustomerModel{
	string firstName=1;
	string lastName=2;
	bool isAlive=3;
	int32 age=5;
}